# gcinside-Backend

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt  secret.json  setup.cfg
.config/uwsgi/: gcinside.ini
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0003_user_username.py
api/accounts/: models.py  urls.py  utils.py  views.py
api/accounts/migrations/: 0002_user_profile_image.py  0004_auto_20220424_0052.py  0005_auto_20220425_2337.py
api/gallery/: apps.py  models.py  urls.py  views.py
api/gallery/migrations/: 0001_initial.py
api/post/: apps.py  models.py  serializers.py  urls.py  views.py
api/post/migrations/: 0004_auto_20220301_0217.py  0006_auto_20220319_2315.py  0009_auto_20220423_2228.py
config/: urls.py
config/settings/: base.py  local.py  production.py
gallery/: models.py  views.py
gcinside/: asgi.py  settings.py  urls.py  wsgi.py
gcinside/settings/: base.py  local.py  production.py
post/: models.py  serializers.py  urls.py  views.py
post/migrations/: 0001_initial.py  0003_auto_20220301_0214.py  0007_post_gallery.py
requirements/: base.txt  local.txt
settings/: settings.py
user/: models.py  urls.py  views.py
v1/api/accounts/: apps.py
v1/api/gallery/: serializers.py  views.py
v1/api/post/: models.py  pagination.py  serializers.py  urls.py  views.py
v1/api/post/migrations/: 0002_auto_20220301_0111.py  0005_comment.py  0008_comment_parent_comment.py
