[tool.poetry]
name = "gcinside"
version = "0.1.0"
description = ""
authors = ["lot8229 <lot8229@kakao.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django-rest-framework = "^0.1.0"
django-allauth = "^0.50.0"
dj-rest-auth = "^2.2.4"
django-filter = "^21.1"
Pillow = "^9.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
